// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLink /> should allow as override 1`] = `
<a
  as="[object Object]"
  class="cursorPointer a"
  rel="noopener noreferrer"
>
  <span
    class="textAlign_left root_base fontWeight_bold_base sizes_4_base root_base pointerEvents_none"
  >
    Test
  </span>
</a>
`;

exports[`<TextLink /> should match the snapshot 1`] = `
<a
  class="cursorPointer a"
  rel="noopener noreferrer"
>
  <span
    class="textAlign_left root_base fontWeight_bold_base sizes_4_base root_base pointerEvents_none"
  />
</a>
`;
